<resources>
    <string name="app_name">MyIdol</string>
    <string name="menu_home">Home</string>
    <string name="menu_hot">Hot</string>
    <string name="menu_nofification">Nofification</string>
    <string name="menu_user">Me</string>
    <string name="edit_profile">Edit profile</string>
    <string name="name_author">Sơn tít</string>
    <string name="my_speak">Gét những người nói được nhưng ko làm được :D</string>
    <string name="email_author">Sonkoii1995@gmail.com</string>
    <string name="describe_idol">Mô tả cảm xúc của bạn về idol :v</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="noaccount">Don"t have account ?</string>
    <string name="haveaccount">Already have account ?</string>
    <string name="lisence">By signing up you agree with our term of user and privacy policy</string>
    <string name="edit">Edit Profile</string>
    <string name="sentencelike">Quotations</string>
    <string name="address">Address</string>
    <string name="username">Username</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="samplesenten">Try hard to make dream come true</string>
    <string name="sampleAddress">Moscow, Russian</string>
    <string name="samplephone">+84335275330</string>
    <string name="save">Confirm</string>
    <string name="Login">Log In</string>
    <string name="Regiser">Regiser</string>
    <string name="orlogin">Or login with social account</string>
</resources>
