<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/nav_hot"
        android:icon="@drawable/ic_image_black_24dp"
        android:title="@string/menu_hot" />
    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:title=" "
         />
    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/menu_nofification" />
    <item
        android:id="@+id/nav_user"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/menu_user" />
</menu>