<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
          <variable
              name="viewmodel"
              type="com.example.myidol.ui.editprofile.EditProfileViewModel" />
    </data>
        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll"
            android:background="@color/colorwhite"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <FrameLayout
                    android:id="@+id/Frame_top"
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_editProfile"
                        android:text="@string/edit"
                        android:fontFamily="@font/baumans"
                        android:textSize="26sp"
                        android:textColor="@color/colorblack"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_avatar"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="120dp"
                        android:src="@drawable/sondz5"
                        android:layout_width="120dp"
                        android:layout_height="120dp"/>
                    <ImageButton
                        android:id="@+id/ivCam"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="180dp"
                        android:background="@drawable/bg_camera_circle"
                        android:layout_marginLeft="60dp"
                        android:src="@drawable/ic_photo_camera_black_24dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"/>

                    <ImageButton
                        android:id="@+id/ibBack"
                        android:background="@null"
                        android:tint="@color/colorblack"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="@dimen/padding_5dp"
                        android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </FrameLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:paddingHorizontal="20dp"
                    android:paddingTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/Frame_top"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/tv_sentenceslike"
                        android:fontFamily="@font/baumans"
                        android:text="@string/sentencelike"
                        android:textSize="@dimen/tittle_size_main"
                        android:textColor="@color/colormainGrey"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <EditText
                        android:id="@+id/edt_sentenceslike"
                        android:textSize="@dimen/content_size_main"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/baumans"
                        android:textColor="@color/colorblack"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:text="@string/samplesenten" />

                   <LinearLayout
                       android:orientation="horizontal"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">
                       <LinearLayout
                           android:layout_weight="1"
                           android:orientation="vertical"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content">
                           <TextView
                               android:id="@+id/tvAddres"
                               android:fontFamily="@font/baumans"
                               android:text="@string/username"
                               android:textSize="@dimen/tittle_size_main"
                               android:textColor="@color/colormainGrey"
                               android:layout_marginTop="10dp"
                               android:layout_gravity="center_horizontal"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"/>
                           <EditText
                               android:id="@+id/edt_Address"
                               android:text="@string/sampleAddress"
                               android:textSize="@dimen/content_size_main"
                               android:inputType="text"
                               android:fontFamily="@font/baumans"
                               android:textColor="@color/colorblack"
                               android:maxLines="1"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"/>
                       </LinearLayout>
                       <LinearLayout
                           android:layout_weight="1"
                           android:orientation="vertical"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content">
                           <TextView
                               android:id="@+id/tvUsername"
                               android:fontFamily="@font/baumans"
                               android:text="@string/address"
                               android:textSize="@dimen/tittle_size_main"
                               android:textColor="@color/colormainGrey"
                               android:layout_marginTop="10dp"
                               android:layout_gravity="center_horizontal"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"/>
                           <EditText
                               android:id="@+id/edt_Username"
                               android:text="@string/sampleAddress"
                               android:inputType="text"
                               android:textSize="@dimen/content_size_main"
                               android:fontFamily="@font/baumans"
                               android:textColor="@color/colorblack"
                               android:maxLines="1"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"/>
                       </LinearLayout>
                   </LinearLayout>
                    <TextView
                        android:id="@+id/tvphone"
                        android:text="@string/phonenumber"
                        android:fontFamily="@font/baumans"
                        android:textSize="@dimen/tittle_size_main"
                        android:textColor="@color/colormainGrey"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/edt_Phone"
                        android:text="@string/samplephone"
                        android:padding="10dp"
                        android:inputType="text"
                        android:textSize="@dimen/content_size_main"
                        android:fontFamily="@font/baumans"
                        android:textColor="@color/colorblack"
                        android:maxLines="1"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/btn_confirm"
                        android:text="@string/save"
                        android:fontFamily="@font/baumans"
                        android:textColor="@color/colorwhite"
                        android:layout_below="@id/edt_Phone"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="@dimen/padding_5dp"
                        android:background="@drawable/bg_item_chat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
</layout>