<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
         <variable
             name="viewmodel"
             type="com.example.myidol.ui.login.LoginViewModel" />
    </data>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@color/colorwhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvLogin"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:text="@string/Login"
            android:textSize="@dimen/tittle_size_main"
            android:fontFamily="@font/baumans"
            android:textColor="@color/colorblack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_email"
            android:hint="email"
            android:inputType="text"
            android:padding="20dp"
            android:layout_below="@id/tvLogin"
            android:fontFamily="@font/baumans"
            android:textColorHint="#C9C1C1"
            android:textColor="@color/colorblack"
            android:textSize="@dimen/content_size_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_password"
            android:hint="password"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:drawableRight="@drawable/ic_remove_red_eye_black_24dp"
            android:fontFamily="@font/baumans"
            android:layout_below="@id/et_email"
            android:textColorHint="#C9C1C1"
            android:textColor="@color/colorblack"
            android:textSize="@dimen/content_size_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_login"
            android:text="@string/signin"
            android:paddingHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorwhite"
            android:layout_below="@id/et_password"
            android:background="@drawable/bg_item_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/llSingup"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_noacount"
                android:text="@string/noaccount"
                android:textColor="@color/colormainGrey"
                android:layout_below="@id/btn_login"
                android:textSize="@dimen/content_size_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_sign_up"
                android:text="@string/signup"
                android:textColor="@color/colormain"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/tv_noacount"
                android:layout_below="@id/btn_login"
                android:textSize="@dimen/content_size_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tvOrLogin"
            android:layout_below="@id/btn_login"
            android:text="@string/orlogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_below="@id/tvOrLogin"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:background="@drawable/bg_social_login"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_facebook"
                    android:text="facebook"
                    android:layout_centerInParent="true"
                    android:textColor="@color/colorblack"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                    <ImageView
                        android:src="@drawable/fb"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_width="30dp"
                        android:layout_height="30dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_weight="1"
                android:background="@drawable/bg_social_login"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:paddingLeft="20dp"
                android:gravity="center"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_twiter"
                    android:text="twitter"
                    android:textColor="@color/colorblack"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:src="@drawable/twiter"
                    android:layout_width="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_height="30dp"/>
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

</layout>